--- a/savas/Themes/savas/default/index.html
+++ b/savas/Themes/savas/default/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>savas</title>
 
+    <link rel="shortcut icon" type="image/png" href="static/favicon.png">
+
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Inconsolata">
 </head>
 <body>
