Title with subtitle

--- a/savas/Themes/savas/default/index.html
+++ b/savas/Themes/savas/default/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>savas</title>
+    <title>savas - a http service to serve application releases</title>
 
     <link rel="shortcut icon" type="image/png" href="static/favicon.png">
 
