Several usability improvements

--- a/savas/Themes/savas/default/index.html
+++ b/savas/Themes/savas/default/index.html
@@ -7,7 +7,7 @@
 
     <link rel="shortcut icon" type="image/png" href="static/favicon.png">
 
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Inconsolata">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Inconsolata|Nunito|Ubuntu">
 </head>
 <body>
 <div id="app"></div>
